# autoa2a

./: MANIFEST.ini  README.md  pyproject.toml  setup.py  setup_dev.py
autoa2a/: cli.py
autoa2a/templates/: framework_dependencies.yaml
autoa2a/templates/agent_specific/langgraph/: __main__.py.jinja2  agent.py.jinja2  taskmanager.py.jinja2
autoa2a/templates/common/: __main__.py.jinja2  pyproject.toml.jinja2  run_a2a.py.jinja2
examples/crewai/simple_researcher/: __main__.py  agent.py  pyproject.toml
examples/langgraph/reflection_agent/: __main__.py  agent.py  pyproject.toml  reflection_agent.py  taskmanager.py
examples/langgraph/self_discover_agent/: __main__.py  agent.py  pyproject.toml  self_discover_agent.py  taskmanager.py
examples/llama_index/openai_query_agent/: __main__.py  agent.py  pyproject.toml  taskmanager.py
examples/openai/translator_agent/: __main__.py  pyproject.toml  taskmanager.py
examples/pydantic/weather-app/: __main__.py  pyproject.toml
