[project]
name = "autoa2a"
version = "0.0.1"
description = "Converts any agent into A2A server"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.1",
    "click>=8.1.8",
    "jinja2>=3.1.6",
    "uvicorn>=0.17.0",
    "python-dotenv>=1.1.0",
    "pyjwt>=2.10.1",
    "jwcrypto>=1.5.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoa2a", "a2a/samples/python/common"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
autoa2a = "autoa2a.cli:autoa2a"