[project]
name = "pydantic-weather-a2a-agent"
version = "0.1.0"
description = "A pydantic agent that tells about the weather"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai==0.0.43",
    "pydantic>=2.11.1",
    "autoa2a",
]

[tool.uv.sources]
autoa2a = { path = "../../../", editable = true }
